--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "arcs",
   "version": "0.0.0",
   "private": true,
+  "bin": {
+    "arcs": "./build/cli/arcs.js",
+    "arcs-manifest": "./build/cli/arcs-manifest.js",
+    "arcs-flowcheck": "./build/dataflow/cli/flowcheck.js",
+    "arcs-ingest": "./build/ingest/cli/arcs-ingest.js"
+  },
   "config": {
     "port": "8786",
     "host": "localhost"
@@ -78,6 +84,7 @@
   },
   "dependencies": {
     "assert": "^1.4.1",
+    "commander": "^2.19.0",
     "esm": "^3.0.84",
     "firebase": "^5.8.2",
     "idb": "^2.1.3",
