--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
   "compilerOptions": {
     "outDir": "build",
     "declaration": true,
-    "experimentalDecorators": true,
+    "experimentalDecorators": true
   },
   "exclude": [
     "build/**/*",
