--- a/package.json
+++ b/package.json
@@ -83,8 +83,10 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^1.0.2",
     "assert": "^1.4.1",
     "commander": "^2.19.0",
+    "dat": "^13.11.5",
     "esm": "^3.0.84",
     "firebase": "^5.8.2",
     "idb": "^2.1.3",
@@ -92,8 +94,10 @@
     "jsrsasign-util": "^1.0.0",
     "node-fetch": "^2.3.0",
     "pouchdb": "^7.0.0",
+    "pouchdb-adapter-leveldb": "^7.0.0",
     "pouchdb-adapter-memory": "^7.0.0",
     "pouchdb-debug": "^7.0.0",
+    "rxdb": "^8.0.6",
     "source-map-support": "^0.5.9",
     "sourcemapped-stacktrace": "^1.1.9",
     "typescript": "^3.3.3",
