add queueing-subject and pouchdb-adapter-http

--- a/package.json
+++ b/package.json
@@ -94,9 +94,11 @@
     "jsrsasign-util": "^1.0.0",
     "node-fetch": "^2.3.0",
     "pouchdb": "^7.0.0",
+    "pouchdb-adapter-http": "^7.0.0",
     "pouchdb-adapter-leveldb": "^7.0.0",
     "pouchdb-adapter-memory": "^7.0.0",
     "pouchdb-debug": "^7.0.0",
+    "queueing-subject": "^0.3.0",
     "rxdb": "^8.0.6",
     "source-map-support": "^0.5.9",
     "sourcemapped-stacktrace": "^1.1.9",
